tests/algorithms/x/Java/neural_network/activation_functions/soboleva_modified_hyperbolic_tangent.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden728_soboleva_modified_hyperbolic_tangent778682191/001/Main.java:8: error: cannot find symbol
            term = term * x / ((Number)(to_float(n))).doubleValue();
                                        ^
  symbol:   method to_float(int)
  location: class Main
1 error
